# server-private/api/swagger.yaml
@@ -601,9 +601,13 @@ definitions:
       code:
         type: "number"
         format: "integer"
+      timestamp:
+        type: "string"
+        format: "date-time"
     example:
       code: 0.80082819046101150206595775671303272247314453125
       email: "email"
+      timestamp: "2000-01-23T04:56:07.000+00:00"
   Source:
     type: "object"
     properties:
